documented the library with code comments, yet to fetch config externally

--- a/projects/weathertest/src/assets/weather/config.json
+++ b/projects/weathertest/src/assets/weather/config.json
@@ -1,4 +1,4 @@
 {
-    "appId": "something something",
-    "url": "something something"
+    "appId": "1092af71c0819d6f24d1b178827d1ac4",
+    "units": "metric"
 }
