--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "weather:build": "ng build weather --watch"
+    "weather:build": "ng build weather --watch",
+    "weather:publish": "ng build weather && cd dist/weather && npm publish --access public"
   },
   "private": true,
   "dependencies": {
